# horitas

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.admin.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
admin/: Dockerfile  app.py  database.py
admin/static/: app.js  style.css
admin/templates/: audio.html  base.html  config.html  dashboard.html  login.html  phrases.html
audio/: phrases.json  phrases.json.example
src/: __init__.py  bot.py  config.py  database.py  main.py
src/cogs/: __init__.py  announcer.py  commands.py  health.py
src/services/: audio.py  phrases.py  scheduler.py  tts.py
src/utils/: logging.py  paths.py
tests/: __init__.py  conftest.py  test_announcer.py  test_audio_service.py  test_config.py  test_database.py  test_logging.py  test_paths.py  test_phrases_service.py  test_scheduler.py  test_tts_service.py
