[project]
name = "horitas"
version = "1.0.0"
description = "Discord bot that announces the current time via voice every hour"
license = {text = "MIT"}
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 45
